chore: install prettier tailwind plugin and format all files
